# mvp-vision-ai-labeler

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .env.example  .gitignore  CUsersflytoProjectGithubmvp-vision-ai-labelerbackendappapiv1endpointsprojects.py  DEVELOPMENT.md  README.md  TESTING.md  TODO.md  docker-compose.yml  pyrightconfig.json  start.bat  stop.bat
backend/: .auto-claude-security.json  .dockerignore  .env.example  Dockerfile  TESTING.md  backfill_image_metadata.py  check_datasets_table.py  check_db.py  check_db_schema.py  check_image_annotations.py  check_image_filenames.py  check_task_separation.py  cleanup_misidentified_classifications.py  cleanup_old_annotations.py  create_text_label_versions.sql  create_text_label_versions_table.py  delete_misidentified_classifications.py  docker-entrypoint.sh  fix_detection_migration.py  generate_thumbnails.py  init_db.py  init_labeler_db.py  inspect_class_annotations.py  inspect_specific_project.py  migrate_export_files.py  migrate_storage_annotations.py  migration_log.txt  pyproject.toml  requirements.txt  test_api_versions.py  test_export_api.py  test_minio.py  test_storage_info_export.py  test_task_specific_stats.py  test_task_type_filter.py  test_text_label_export.py  update_project_task_types.py
backend/alembic/: env.py
backend/alembic/versions/: 20251113_1143_a3d91e0b936a_initial_schema.py  (+20 more)
backend/app/: __init__.py  main.py
backend/app/core/: config.py  (+5 more)
backend/scripts/: add_missing_owner_permissions.py  check_enum_values.py  check_invitations_data.py  check_invitations_schema.py  grant_missing_permissions.py  init_database.py  migrate_add_file_extensions.py  migrate_annotations_task_type.py  migrate_dataset_permissions_to_project.py  test_r2_access.py  verify_file_extensions.py  verify_migration.py  verify_project_permission.py
backend/tests/: LABELER_JWT_SELF_TEST.py  README.md  conftest.py  test_fixtures_setup.py  test_hybrid_url.py  test_storage_info_export.py  test_storage_upload.py  test_task_specific_stats.py
(+360 files in other folders)
