[project]
name = "vision-ai-labeler-backend"
version = "0.1.0"
description = "Vision AI Labeler - Backend API"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Web Framework
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    # Database
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    # Redis
    "redis==5.0.1",
    "hiredis==2.3.2",
    # Authentication & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.2",
    # S3 / MinIO
    "boto3==1.34.23",
    "botocore==1.34.23",
    # Image Processing
    "pillow==10.2.0",
    # Validation & Serialization
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0",
    # HTTP Client
    "httpx==0.26.0",
    "aiohttp==3.9.1",
    # Utilities
    "python-dotenv==1.0.0",
    "pytz==2023.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    # Code Quality
    "black==23.12.1",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0",
    # Development
    "watchfiles==0.21.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "black==23.12.1",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "watchfiles==0.21.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | alembic/versions
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "alembic/versions"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["alembic/versions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
